...

  static final Map<DatabaseType, String> _displayNameMap = {
    DatabaseType.mysql: 'MySQL',
    DatabaseType.postgresql: 'PostgreSQL',
    DatabaseType.sqlite: 'SQLite',
    DatabaseType.doris: 'Doris',
    DatabaseType.redis: 'Redis',
    DatabaseType.mongodb: 'MongoDB',
    DatabaseType.tdengine: 'TDengine',
    DatabaseType.sqlserver: 'SQL Server',
    DatabaseType.clickhouse: 'ClickHouse',
    DatabaseType.oceanbase: 'OceanBase',
    DatabaseType.tidb: 'TiDB',
    DatabaseType.starrocks: 'StarRocks',
...
  };

  /// 在 UI 中可供选择的数据库类型
  static List<DatabaseType> get uiSelectableValues => values;

  static final Map<DatabaseType, String> _entityPanelTableLabelMap = {
    DatabaseType.mongodb: 'Collections',
    DatabaseType.redis: 'Namespaces',
  };

  /// 是否为类SQL数据库（使用SQL语法）
  bool get isSqlLike => _sqlLikeTypes.contains(this);

...
