...
  }

  @override
  String get mongoNodeReplication => 'Replication';

  @override
  String get mongoNodeSharding => 'Sharding';

  @override
  String get mongoValidationRules => 'Validation Rules';

  @override
  String get mongoReplicationStandalone =>
...
  String get redisCapKeyspaceNotifications => 'Keyspace Notifications';

  @override
  String get redisCapAcl => 'ACL Management';

  @override
  String get redisCapConfig => 'Edit Config';

  @override
  String get mongoValidationTitle => 'Validation Rules';

  @override
  String get mongoValidationNoValidator =>
...
